--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Free Fire Rewarding Site</title>
+<title>Rewards</title>
 <style>
   /* Resetting default styles */
   * {
@@ -86,7 +86,7 @@
 <body>
 
 <div class="top-header">
-  <h1>Welcome to Free Fire Rewards</h1>
+  <h1>Welcome to Rewards</h1>
 </div>
 
 <div class="buttons">
@@ -96,12 +96,12 @@
 </div>
 
 <div class="main-content">
-  <h2>About Free Fire Rewards</h2>
-  <p>Explore exciting ways to earn rewards in Free Fire! Compete in battles, complete challenges, and collect points to redeem exclusive items and upgrades.</p>
+  <h2>About Rewards</h2>
+  <p>Explore exciting ways to earn Play Store rewards! Compete in battles, complete challenges, and collect points to redeem exclusive items and upgrades.</p>
 </div>
 
 <footer class="footer">
-  <p>&copy; 2024 Free Fire Rewards. All rights reserved.</p>
+  <p>&copy; 2024 Rewards. All rights reserved.</p>
 </footer>
 
 </body>
