--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="main-content">
   <h2>About Rewards</h2>
-  <p>Explore exciting ways to earn Play Store rewards! Compete in battles, complete challenges, and collect points to redeem exclusive items and upgrades.</p>
+  <p>Explore exciting ways to earn Freefire rewards! Compete in battles, complete challenges, and collect points to redeem exclusive items and upgrades.</p>
 </div>
 
 <footer class="footer">
