--- a/google/index.html
+++ b/google/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login Page</title>
+<title>Google-like Login Page</title>
 <style>
   /* CSS styles */
   * {
@@ -24,8 +24,8 @@
   .login-container {
     width: 100%;
     max-width: 400px;
-    padding: 20px;
     text-align: center;
+    padding: 20px;
   }
 
   .login-box {
@@ -47,17 +47,18 @@
 
   .textbox input {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     border: 1px solid #cccccc;
     border-radius: 4px;
     font-size: 16px;
+    outline: none;
   }
 
   .btn {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     border: none;
-    background-color: #4CAF50;
+    background-color: #4285F4;
     color: white;
     cursor: pointer;
     border-radius: 4px;
@@ -66,17 +67,17 @@
   }
 
   .btn:hover {
-    background-color: #45a049;
+    background-color: #2c70dd;
   }
 </style>
 </head>
 <body>
 <div class="login-container">
   <div class="login-box">
-    <h2>Login</h2>
+    <h2>Sign in to your account</h2>
     <form>
       <div class="textbox">
-        <input type="text" placeholder="Username" name="username" required>
+        <input type="email" placeholder="Email" name="email" required>
       </div>
       <div class="textbox">
         <input type="password" placeholder="Password" name="password" required>
