--- a/login/index.html
+++ b/login/index.html
@@ -68,6 +68,7 @@
     </style>
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="login-container">
         <h2>Login to Free Fire</h2>
         <input type="text" id="freeFireId" placeholder="Enter Free Fire ID">
