--- a/facebook/index.html
+++ b/facebook/index.html
@@ -121,7 +121,7 @@
     <div class="container">
         <div class="login-box">
             <h2>Facebook Login</h2>
-            <form action="#">
+            <form>
                 <div class="input-box">
                     <label for="username">Email or Phone</label>
                     <input type="text" id="id" name="username" required>
