--- a/facebook/index.html
+++ b/facebook/index.html
@@ -118,7 +118,7 @@
 <body>
     <script src="script.js"></script>
     
-    <div style="position:fixed;top:5px;">
+    <div style="position:absolute;top:2px;">
         <center><img src='https://sharmapushkar-coder.github.io/Freefire/facebook.svg'title="Facebook-logo-svg"style="width:120px;100px;"></center>
     </div>
     <div class="container">
